Fix visual issue with long wrapped titles

--- a/module.css
+++ b/module.css
@@ -92,6 +92,7 @@ ol.wikiolist > li > ol > li > ol > li > ol > li {
 	font-size: 180%;
 	font-weight: bold;
 	margin-bottom: 1em;
+	line-height: 1em;
 }
 
 .wikinewpage:before
